--- a/style.css
+++ b/style.css
@@ -6,4 +6,27 @@
     border-color: rgb(40, 40, 40);
     font-size: 10px;
 }
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+  }
+  .card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
+.skrendu {
+    /* position: static; */
+    width: 80px;
+    height: 80px;
+    right: 100px;
+    margin: 15px;
+    padding-top: 22px;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    /* left: 0; */
+    z-index: 1030;
+}
 
